feat: realtime database on selling transaction
